# cmake-template-include-subdirectories

./: CMakeLists.txt  README.org  main.cpp
